--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,21 +22,21 @@ jobs:
           plugin_achievements: yes
           plugin_calendar: yes
           plugin_calendar_limit: 3
-          #plugin_followup: yes
+          plugin_followup: yes
           plugin_habits: yes
-          plugin_habits_facts: no
+          plugin_habits_facts: yes
           plugin_habits_charts: yes
           plugin_introduction: yes
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
           plugin_languages: yes
-          plugin_languages_ignored: dockerfile, makefile, SCSS, Jupyter Notebook, CSS, HTML
+          plugin_languages_ignored: dockerfile, TSQL, EJS, Batchfile, makefile, SCSS, Jupyter Notebook, CSS, HTML
           plugin_licenses: yes
           plugin_lines:  yes
-          plugin_notable: yes
-          #plugin_people: yes
+          plugin_notable: no
+          plugin_people: yes
           plugin_people_types: contributors
           plugin_repositories: yes
           plugin_repositories_featured: Lutif/react-touchdown, Lutif/create-react-rust 
-          #plugin_topics: yes
-          #plugin_topics_mode: icons
+          plugin_topics: yes
+          plugin_topics_mode: icons
